Fix pageBanner title alignment

--- a/src/components/pages/frontpage/components/page-banner/pageBanner.less
+++ b/src/components/pages/frontpage/components/page-banner/pageBanner.less
@@ -9,6 +9,10 @@
     }
     &--noIllustration {
         padding-top: 1.5rem;
+        text-align: center;
+        .pageBanner__title {
+            text-align: center;
+        }
         .pageBanner__contentWrapper {
             padding-bottom: 1.5rem;
         }
@@ -86,10 +90,8 @@
         }
     }
     &__title {
-        // font-size: 2.25rem;
         font-size: 2rem;
         margin-bottom: 0.5rem;
-        text-align: center;
         .pageBanner--noIllustration & {
             margin-bottom: 0;
         }
